data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_728.wast
;; 9. **Test 9: `nop` Before `br_table` With Maximum Integer Index**    - Assess the behavior of a `br_table` instruction with a maximum integer index following a `nop` instruction to test potential overflow or improper handling.    - Constraint: Confirm that the `nop` does not influence the handling of extreme index values and that correct traps are triggered.

(assert_invalid
  (module (func $br_table_max (nop) (block $label0 (br_table $label0 (i32.const 2147483647)))))
  "destination index out of bounds"
)